--- a/index.html
+++ b/index.html
@@ -44,6 +44,8 @@
             level: 3
           };
           var map = new kakao.maps.Map(container, options);
+          var mapTypeControl = new kakao.maps.MapTypeControl();
+          map.addControl(mapTypeControl, kakao.maps.ControlPosition.TOPRIGHT);
         </script>
       </div>
     </div>
