--- a/01/01.html
+++ b/01/01.html
@@ -25,9 +25,11 @@
           </a>
         </div>
         <div class="mypage">
+          <a href=""><img src="../img/mypage.png" alt="마이페이지"></a>
+          <a href=""><img src="../img/noti.png" alt="알림센터"></a>
         </div>
         <div class="btns">
-          <a href="01.html"><div class="navbtn">내 농지</div></a>
+          <a href="01.html"><div class="navbtn" style="border-bottom: 2px solid white;">내 농지</div></a>
           <a href="../02/02.html"><div class="navbtn">방제기록</div></a>
         </div>
       </div>
