--- a/index.html
+++ b/index.html
@@ -25,6 +25,8 @@
           </a>
         </div>
         <div class="mypage">
+          <a href=""><img src="img/mypage.png" alt="마이페이지"></a>
+          <a href=""><img src="img/noti.png" alt="알림센터"></a>
         </div>
         <div class="btns">
           <a href="01/01.html"><div class="navbtn">내 농지</div></a>
