--- a/02/02.html
+++ b/02/02.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>방제기록 - 농작업 스케줄링 플랫폼</title>
+    <title>방제 기록 - 농작업 스케줄링 플랫폼</title>
     <link rel="shortcut icon" href="img/favicon.png" />
     <link rel="stylesheet" href="../style.css">
     <!-- 구글 폰트 -->
@@ -30,14 +30,62 @@
         </div>
         <div class="btns">
           <a href="../01/01.html"><div class="navbtn">내 농지</div></a>
-          <a href="02.html"><div class="navbtn" style="border-bottom: 2px solid white;">방제기록</div></a>
+          <a href="02.html"><div class="navbtn" style="border-bottom: 2px solid white;">방제 기록</div></a>
         </div>
       </div>
     </header>
 
     <!--메인 화면-->
     <div class="maincont">
-
+      <div class="title">방제 기록</div>
+      <table>
+        <thead>
+          <tr>
+            <th>작업일시</th><th>농지 주소</th><th>상태</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr>
+            <td>-</td><td>전북 익산시 황등면 신성리 362-3</td><td style="color:#3C64B1;">예약</td>
+          </tr>
+          <tr>
+            <td>2022.09.29. 13:41:23</td><td>전북 익산시 황등면 신성리 362-3</td><td>완료</td>
+          </tr>
+          <tr>
+            <td>2022.09.29. 13:41:23</td><td>전북 익산시 황등면 신성리 362-3</td><td>완료</td>
+          </tr>
+          <tr>
+            <td>2022.09.29. 13:41:23</td><td>전북 익산시 황등면 신성리 362-3</td><td>완료</td>
+          </tr>
+          <tr>
+            <td>2022.09.29. 13:41:23</td><td>전북 익산시 황등면 신성리 362-3</td><td>완료</td>
+          </tr>
+          <tr>
+            <td>2022.09.29. 13:41:23</td><td>전북 익산시 황등면 신성리 362-3</td><td>완료</td>
+          </tr>
+          <tr>
+            <td>2022.09.29. 13:41:23</td><td>전북 익산시 황등면 신성리 362-3</td><td>완료</td>
+          </tr>
+          <tr>
+            <td>2022.09.29. 13:41:23</td><td>전북 익산시 황등면 신성리 362-3</td><td>완료</td>
+          </tr>
+          <tr>
+            <td>2022.09.29. 13:41:23</td><td>전북 익산시 황등면 신성리 362-3</td><td>완료</td>
+          </tr>
+          <tr>
+            <td>2022.09.29. 13:41:23</td><td>전북 익산시 황등면 신성리 362-3</td><td>완료</td>
+          </tr>
+          <tr>
+            <td>2022.09.29. 13:41:23</td><td>전북 익산시 황등면 신성리 362-3</td><td>완료</td>
+          </tr>
+          <tr>
+            <td>2022.09.29. 13:41:23</td><td>전북 익산시 황등면 신성리 362-3</td><td>완료</td>
+          </tr>
+          <tr>
+            <td>2022.09.29. 13:41:23</td><td>전북 익산시 황등면 신성리 362-3</td><td>완료</td>
+          </tr>
+        </tbody>
+      </table>
     </div>
   </body>
 </html>
