--- a/02/02.html
+++ b/02/02.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>방제 기록 - 농작업 스케줄링 플랫폼</title>
-    <link rel="shortcut icon" href="img/favicon.png" />
+    <link rel="shortcut icon" href="../img/favicon.png" />
     <link rel="stylesheet" href="../style.css">
     <!-- 구글 폰트 -->
     <link rel="preconnect" href="https://fonts.gstatic.com">
@@ -21,7 +21,7 @@
       <div class="navbar">
         <div id="logo">
           <a href="../index.html">
-            <img src="img/w_logo.png" width="100px" alt="더피치">
+            <img src="../img/w_logo.png" width="100px" alt="더피치">
           </a>
         </div>
         <div class="mypage">
@@ -86,6 +86,11 @@
           </tr>
         </tbody>
       </table>
+      <div class="bottom">
+        <div class="num"><a>〈</a><a style="color:#3C64B1; font-weight:700">1</a><a>2</a><a>3</a><a>4</a><a>...</a><a>17</a><a>〉</a></div>
+        <div class="add"><img src="../img/add.png"><span>방제 신청</span></div>
+        <div class="search"><img src="../img/search.png"><span>검색어를 입력해주세요.</span></div>
+      </div>
     </div>
   </body>
 </html>
