--- a/01/01.html
+++ b/01/01.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>내 농지 - 농작업 스케줄링 플랫폼</title>
+    <title>방제 기록 - 농작업 스케줄링 플랫폼</title>
     <link rel="shortcut icon" href="../img/favicon.png" />
     <link rel="stylesheet" href="../style.css">
     <!-- 구글 폰트 -->
@@ -37,7 +37,32 @@
 
     <!--메인 화면-->
     <div class="maincont">
+      <div class="title">
+        내 농지
+      </div>
+      <table>
+        <thead>
+          <tr>
+            <th style="width: 95%;">농지 주소</th><th></th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr>
+            <td><a href="../02/021.html">전북 익산시 황등면 신성리 362-3</a></td><td style="color: #CB1010; font-weight:700; text-decoration: underline;">삭제</td>
+          </tr>
+          <tr>
+            <td>전북 익산시 황등면 율촌리 616-3</td><td style="color: #CB1010; font-weight:700; text-decoration: underline;">삭제</td>
+          </tr>
+          <tr>
+            <td>전북 익산시 황등면 죽촌리 312-11</td><td style="color: #CB1010; font-weight:700; text-decoration: underline;">삭제</td>
+          </tr>
 
+        </tbody>
+      </table>
+      <div class="bottom">
+       <div class="add"><img src="../img/add.png"><span>농지 추가</span></div>
+       <div class="search"><img src="../img/search.png"><span>검색어를 입력해주세요.</span></div>
+      </div>
     </div>
   </body>
 </html>
