--- a/02/02.html
+++ b/02/02.html
@@ -41,48 +41,48 @@
       <table>
         <thead>
           <tr>
-            <th>작업일시</th><th>농지 주소</th><th>상태</th>
+            <th style="width:30%;">작업일시</th><th style="width:60%;">농지 주소</th><th>상태</th>
           </tr>
         </thead>
         <tbody>
           <tr>
-            <td>-</td><td>전북 익산시 황등면 신성리 362-3</td><td style="color:#3C64B1;">예약</td>
+            <td>-</td><td><a href="021.html">전북 익산시 황등면 신성리 362-3</a></td><td style="color:#3C64B1;">예약</td>
           </tr>
           <tr>
-            <td>2022.09.29. 13:41:23</td><td>전북 익산시 황등면 신성리 362-3</td><td>완료</td>
+            <td>2022.09.29. 13:41:23</td><td><a href="021.html">전북 익산시 황등면 신성리 362-3</a></td><td>완료</td>
           </tr>
           <tr>
-            <td>2022.09.29. 13:41:23</td><td>전북 익산시 황등면 신성리 362-3</td><td>완료</td>
+            <td>2022.09.29. 13:41:23</td><td><a href="021.html">전북 익산시 황등면 신성리 362-3</a></td><td>완료</td>
           </tr>
           <tr>
-            <td>2022.09.29. 13:41:23</td><td>전북 익산시 황등면 신성리 362-3</td><td>완료</td>
+            <td>2022.09.29. 13:41:23</td><td><a href="021.html">전북 익산시 황등면 신성리 362-3</a></td><td>완료</td>
           </tr>
           <tr>
-            <td>2022.09.29. 13:41:23</td><td>전북 익산시 황등면 신성리 362-3</td><td>완료</td>
+            <td>2022.09.29. 13:41:23</td><td><a href="021.html">전북 익산시 황등면 신성리 362-3</a></td><td>완료</td>
           </tr>
           <tr>
-            <td>2022.09.29. 13:41:23</td><td>전북 익산시 황등면 신성리 362-3</td><td>완료</td>
+            <td>2022.09.29. 13:41:23</td><td><a href="021.html">전북 익산시 황등면 신성리 362-3</a></td><td>완료</td>
           </tr>
           <tr>
-            <td>2022.09.29. 13:41:23</td><td>전북 익산시 황등면 신성리 362-3</td><td>완료</td>
+            <td>2022.09.29. 13:41:23</td><td><a href="021.html">전북 익산시 황등면 신성리 362-3</a></td><td>완료</td>
           </tr>
           <tr>
-            <td>2022.09.29. 13:41:23</td><td>전북 익산시 황등면 신성리 362-3</td><td>완료</td>
+            <td>2022.09.29. 13:41:23</td><td><a href="021.html">전북 익산시 황등면 신성리 362-3</a></td><td>완료</td>
           </tr>
           <tr>
-            <td>2022.09.29. 13:41:23</td><td>전북 익산시 황등면 신성리 362-3</td><td>완료</td>
+            <td>2022.09.29. 13:41:23</td><td><a href="021.html">전북 익산시 황등면 신성리 362-3</a></td><td>완료</td>
           </tr>
           <tr>
-            <td>2022.09.29. 13:41:23</td><td>전북 익산시 황등면 신성리 362-3</td><td>완료</td>
+            <td>2022.09.29. 13:41:23</td><td><a href="021.html">전북 익산시 황등면 신성리 362-3</a></td><td>완료</td>
           </tr>
           <tr>
-            <td>2022.09.29. 13:41:23</td><td>전북 익산시 황등면 신성리 362-3</td><td>완료</td>
+            <td>2022.09.29. 13:41:23</td><td><a href="021.html">전북 익산시 황등면 신성리 362-3</a></td><td>완료</td>
           </tr>
           <tr>
-            <td>2022.09.29. 13:41:23</td><td>전북 익산시 황등면 신성리 362-3</td><td>완료</td>
+            <td>2022.09.29. 13:41:23</td><td><a href="021.html">전북 익산시 황등면 신성리 362-3</a></td><td>완료</td>
           </tr>
           <tr>
-            <td>2022.09.29. 13:41:23</td><td>전북 익산시 황등면 신성리 362-3</td><td>완료</td>
+            <td>2022.09.29. 13:41:23</td><td><a href="021.html">전북 익산시 황등면 신성리 362-3</a></td><td>완료</td>
           </tr>
         </tbody>
       </table>
