--- a/02/021.html
+++ b/02/021.html
@@ -37,11 +37,11 @@
 
     <!--메인 화면-->
     <div class="maincont">
-      <div class="title2"><img src="../img/back.png"><span>전북 익산시 황등면 신성리 362-3</span></div>
+      <div class="title2"><a href="02.html"><img src="../img/back.png"></a><span>전북 익산시 황등면 신성리 362-3</span></div>
       <table>
         <thead>
           <tr>
-            <th>작업일시</th><th>방제단</th><th>작업자</th><th>담당자 연락처</th><th>상태</th>
+            <th style="width:25%;">작업일시</th><th style="width:25%;">방제단</th><th style="width:15%;">작업자</th><th style="width:25%;">담당자 연락처</th><th>상태</th>
           </tr>
         </thead>
         <tbody>
