--- a/index.html
+++ b/index.html
@@ -46,6 +46,21 @@
            mapTypeId: kakao.maps.MapTypeId. SKYVIEW
          };
          var map = new kakao.maps.Map(container, options);
+         var polygon = new kakao.maps.Polygon({
+          map : map,
+          path : [
+            new kakao.maps.LatLng(35.978780, 126.966190),
+            new kakao.maps.LatLng(35.977812, 126.966556),
+            new kakao.maps.LatLng(35.977440, 126.964986),
+            new kakao.maps.LatLng(35.978397, 126.964634)
+          ],
+          fillcolor: '#4A6FF1',
+          fillOpacity: 0.4,
+          strokeWeight: 3,
+          strokeColor: '#4A6FF1',
+          strokeOpacity: 0.9,
+          strokeStyle: 'solid'
+         });
        </script>
      </div>
   </body>
