--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
             new kakao.maps.LatLng(35.977440, 126.964986),
             new kakao.maps.LatLng(35.978397, 126.964634)
           ],
-          fillcolor: '#4A6FF1',
+          fillColor: '#4A6FF1',
           fillOpacity: 0.4,
           strokeWeight: 3,
           strokeColor: '#4A6FF1',
