--- a/index.html
+++ b/index.html
@@ -63,5 +63,11 @@
          });
        </script>
      </div>
+    <!--오버-->
+    <div class="over">
+      <div class="ad">전북 익산시 황등면 신성리 362-3</div>
+      <div class="adbtn">농지 관리</div>
+    </div>
+
   </body>
 </html>
