--- a/index.html
+++ b/index.html
@@ -69,4 +69,14 @@
       <a href="01/01.html"><div class="adbtn">농지 관리</div></a>
     </div>
   </body>
+
+  <div id="popup" class="hide">
+    <div class="popcont">
+      <div class="popti"></div>
+      <div class="d">농지 주소</div><div class="o">전북 익산시 황등면 죽촌리 312-11</div>
+      <button onclick="closePopup()">닫기</button>
+      <button onclick="closePopup()">방제 신청</button>"
+    </div>
+  </div>
+
 </html>
