--- a/02/021.html
+++ b/02/021.html
@@ -29,7 +29,7 @@
           <a href=""><img src="../img/noti.png" alt="알림센터"></a>
         </div>
         <div class="btns">
-          <a href="../01/01.html"><div class="navbtn">내 농지</div></a>
+          <a href="../index.html"><div class="navbtn">내 농지</div></a>
           <a href="02.html"><div class="navbtn" style="border-bottom: 2px solid white;">방제 기록</div></a>
         </div>
       </div>
@@ -88,7 +88,7 @@
       </table>
       <div class="bottom">
         <div class="num"><a>〈</a><a style="color:#3C64B1; font-weight:700">1</a><a>2</a><a>3</a><a>4</a><a>...</a><a>17</a><a>〉</a></div>
-        <div class="add"><img src="../img/down.png"><span>기록 다운로드</span></div>
+        <div class="add" style="cursor:pointer"><img src="../img/down.png"><span>기록 다운로드</span></div>
         <div class="search"><img src="../img/search.png"><span>검색어를 입력해주세요.</span></div>
       </div>
     </div>
