--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
           <a href=""><img src="img/noti.png" alt="알림센터"></a>
         </div>
         <div class="btns">
-          <a href="01/01.html"><div class="navbtn">내 농지</div></a>
+          <a href="index.html"><div class="navbtn" style="border-bottom: 2px solid white;">내 농지</div></a>
           <a href="02/02.html"><div class="navbtn">방제 기록</div></a>
         </div>
       </div>
