--- a/01/01.html
+++ b/01/01.html
@@ -29,7 +29,7 @@
           <a href=""><img src="../img/noti.png" alt="알림센터"></a>
         </div>
         <div class="btns">
-          <a href="01.html"><div class="navbtn" style="border-bottom: 2px solid white;">내 농지</div></a>
+          <a href="../index.html"><div class="navbtn" style="border-bottom: 2px solid white;">내 농지</div></a>
           <a href="../02/02.html"><div class="navbtn">방제 기록</div></a>
         </div>
       </div>
@@ -48,7 +48,7 @@
         </thead>
         <tbody>
           <tr>
-            <td onClick="document.getElementById('modal2').style.display='block'">전북 익산시 황등면 신성리 362-3</td><td style="color: #CB1010; font-weight:700; text-decoration: underline;">삭제</td>
+            <td onClick="document.getElementById('modal2').style.display='block'" style="cursor:pointer">전북 익산시 황등면 신성리 362-3</td><td style="color: #CB1010; font-weight:700; text-decoration: underline;">삭제</td>
           </tr>
           <tr>
             <td>전북 익산시 황등면 율촌리 616-3</td><td style="color: #CB1010; font-weight:700; text-decoration: underline;">삭제</td>
@@ -60,7 +60,7 @@
         </tbody>
       </table>
       <div class="bottom">
-       <div class="add" onClick="document.getElementById('modal').style.display='block'"><img src="../img/add.png"><span>농지 추가</span></div>
+       <div class="add" onClick="document.getElementById('modal').style.display='block'" style="cursor:pointer"><img src="../img/add.png"><span>농지 추가</span></div>
        <div class="search"><img src="../img/search.png"><span>검색어를 입력해주세요.</span></div>
       </div>
     </div>
@@ -73,8 +73,8 @@
           <span class="mdtitle">농지 추가</span>
           <span class="left">농지 주소</span><input type="text" placeholder=" 지번주소를 입력해주세요." class="right2">
           <span class="left">메모</span><input type="text" placeholder=" 메모를 입력해주세요." class="right2">
-          <button class="cancel" onclick="document.getElementById('modal').style.display='none'" type="button">취소</button>
-          <button class="ok" onclick="document.getElementById('modal').style.display='none'" type="button">추가</button>
+          <button class="cancel" onclick="document.getElementById('modal').style.display='none'" type="button" style="cursor:pointer">취소</button>
+          <button class="ok" onclick="document.getElementById('modal').style.display='none'" type="button" style="cursor:pointer">추가</button>
         </div>
       </div>
     </div>
@@ -84,11 +84,11 @@
       <div class="fg">
         <div class="fgin">
           <span class="mdtitle">농지 정보</span>
-          <span class="left">농지 주소</span><span class="right">전북 익산시 황등면 죽촌리 312-11</span>
-          <span class="left">최근 방제 일시</span><span class="right">2022.08.28. 13:11:16</span>
+          <span class="left">농지 주소</span><span class="right">전북 익산시 황등면 신성리 362-3</span>
+          <span class="left">최근 방제 일시</span><span class="right" style="width:50%;">2022.08.28. 13:11:16</span><a href="../02/021.html"><span class="right3">방제 기록</span></a>
           <span class="left">상태</span><span class="right">예약된 방제 없음</span>
-          <button class="cancel" onclick="document.getElementById('modal2').style.display='none'" type="button">취소</button>
-          <button class="ok" onclick="document.getElementById('modal2').style.display='none'" type="button">방제 신청</button>
+          <button class="cancel" onclick="document.getElementById('modal2').style.display='none'" type="button" style="cursor:pointer">취소</button>
+          <button class="ok" onclick="document.getElementById('modal2').style.display='none'" type="button" style="cursor:pointer">방제 신청</button>
         </div>
       </div>
     </div>    
